# project-video-agent

./: .gitignore  README.md  agent.py  models.py  pyproject.toml  requirements.txt
examples/: merge.py
prompts/: 1. inception.md  2. writer.md  3. director.md  4. ideas.md
